--- a/CSE135/WebContent/WEB-INF/web.xml
+++ b/CSE135/WebContent/WEB-INF/web.xml
@@ -2,13 +2,13 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>CSE135</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>signup.html</welcome-file>
   </welcome-file-list>
   
   <description>
 		CSE 135 project.
   </description>
- 	
+  
   <servlet>
 		<servlet-name>signup</servlet-name>
 		<jsp-file>/signup.jsp</jsp-file>
@@ -16,7 +16,7 @@
 
   <servlet-mapping>
 		<servlet-name>signup</servlet-name>
-		<url-pattern>/index</url-pattern>
+		<url-pattern>/signup</url-pattern>
   </servlet-mapping>
   
 </web-app>
